feat: :art: Complete UI design for game; implement game logic in JavaScript

--- a/index.html
+++ b/index.html
@@ -4,11 +4,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Etch-a-Sketch</title>
+    <link rel="stylesheet" href="/etch-a-sketch-fun/Css/normalize.css">
+    <link rel="stylesheet" href="/etch-a-sketch-fun/Css/style.css">
+    <script src="script.js" defer></script>
 </head>
 
 <body>
+    <header class="header-content">
+        <h1 class="title">Etch-a-Sketch</h1>
+    </header>
+    <main class="main-content">
+        <p class="description">
+            Choose the grid and the color, then hover the mouse to paint. <br>
+            To clear the grid - just push the same or another grid button.
+        </p>
+        <div class="options">
+            <div class="color-button">
+                <button class="kobo rectangle">Kobo</button>
+                <button class="rainbow rectangle">Rainbow</button>
+            </div>
+            <div class="grid-button">
+                <button class="grid-10 circle">10X10</button>
+                <button class="grid-20 circle active">20X20</button>
+                <button class="grid-30 circle">30X30</button>
+            </div>
+            <div class="color-button">
+                <button class="black rectangle">Black</button>
+                <button class="white rectangle">White</button>
+            </div>
+        </div>
+        <div class="toy-container">
+            <div class="grid-container">
 
+            </div>
+        </div>
+    </main>
+    <footer>
+        <p>Created By <a href="https://github.com/Nyanns">Nyanns Dev</a></p>
+    </footer>
 </body>
 
-</html>
+</html>`
