feat: :rocket: All done and ready to deploy on GitHub! Maybe I'll add a moving background with a Kobo theme another time.

--- a/index.html
+++ b/index.html
@@ -54,6 +54,21 @@
                 <!-- Grid akan dihasilkan dan ditambahkan di sini oleh JavaScript -->
             </div>
         </div>
+
+        <!-- Kontainer untuk Music dan reset -->
+        <div class="multimedia-container">
+            <div class="multimedia-options">
+                <button id="musicButton" class="music-button"></button>
+                <!-- Audio untuk musik background -->
+                <audio id="backgroundMusic" loop>
+                    <!-- Uncomment baris di bawah ini jika ada file musik yang valid -->
+                    <source src="music/3RD ORIGINAL SONG MV Entah.. - Kobo Kanaeru hololive Indonesia 3rd Gen.mp3"
+                        type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+                <button class="reset-button">Reset</button>
+            </div>
+        </div>
     </main>
 
     <!-- Footer dengan kredit pembuat -->
