feat: :art: add img gor README and fix bug on music button

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <!-- Kontainer untuk Music dan reset -->
         <div class="multimedia-container">
             <div class="multimedia-options">
-                <button id="musicButton" class="music-button"></button>
+                <button id="musicButton" class="music-button">🎵 Music</button>
                 <!-- Audio untuk musik background -->
                 <audio id="backgroundMusic" loop>
                     <!-- Uncomment baris di bawah ini jika ada file musik yang valid -->
